# mcudbg

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_CN.md  mcudbg-diagnose-startup-failure-spec.md  pyproject.toml
docs/: README.md  ai-examples.md  ai-playbook.md  attempt-fix-and-verify-v0.1-spec.md  auto-fix-demo-plan.md  board-validation-guide.md  breakpoint-debugging-v0.1-spec.md  demo-buggy-fixed-plan.md  demo-output.md  demo-script-3min.md  final-demo-runbook.md  final-mcp-config-template.md  first-hardware-debug-checklist.md  first-real-mcudbg-run.md  github-launch-kit.md  launch-post-cn-short.md  launch-post-cn.md  mcp-usage-example.md  mcudbg-demo-script.md  mvp-gap-checklist.md  mvp-validation-report.md  quickstart.md  real-board-expected-diagnosis.md  recording-preflight-checklist.md  roadmap-30-60-90.md  screenshot-selection-guide.md  stlink-attach-checklist.md  stm32l4-hardware-checklist.md  support-matrix.md  v0.6-roadmap.md  wechat-article-cn.md  weekly-execution-plan.md  windows-keil-build-flash-plan.md  windows-mcp-config-example.md
scripts/: jlink_rtt_smoke.py  jlink_swo_smoke.py
src/mcudbg/: __init__.py  build_runtime.py  chip_matcher.py  config.py  device_patch_manager.py  elf_manager.py  errors.py  gdb_server.py  server.py  (+2 more)
tests/: __init__.py  test_breakpoint_tools.py  test_configuration_profiles.py  test_debug_loop.py  test_demo_diagnosis.py  test_fault_classification.py  test_flash_tools.py  test_gdb_server_tools.py  test_jlink_backend.py  test_lifecycle_tools.py  test_phase3.py  test_svd_tools.py  test_watchpoint_and_fpu_tools.py
(+34 files in other folders)
