[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcudbg"
version = "0.4.0"
description = "AI-native debugging and observability for embedded boards"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "SolarWang233", email = "SolarWang233@github.com" }
]
dependencies = [
    "mcp>=1.26.0",
    "pydantic>=2.12.0",
    "pyelftools>=0.32",
    "pyocd>=0.36.0",
    "pyserial>=3.5",
    "cmsis-svd>=0.4",
]

[project.optional-dependencies]
jlink = [
    "pylink-square>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mcudbg = "mcudbg.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcudbg"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]

[tool.ruff]
line-length = 100
target-version = "py310"
